--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  
 jobs:
   update-backup:
     runs-on: ubuntu-latest
@@ -13,11 +16,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Configure Git
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
 
       - name: Create or Switch to Backup Branch
         run: |
