--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 permissions:
-  contents: write
-  
+  contents: write, workflows
+
 jobs:
   update-backup:
     runs-on: ubuntu-latest
