--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -17,6 +17,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      # This is stupid, and shoudn't be necessary, but it is.
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
       - name: Create or Switch to Backup Branch
         run: |
           git checkout -b backup || git checkout backup
@@ -26,18 +32,18 @@ jobs:
           git fetch origin main
           git reset --hard main~1
 
-      # Needed to workflow permission issues
+      # More stupid stuff that shouldn't be necessary, but is.
       - name: Ignore Workflows Folder
         run: |
           echo ".github/workflows/" >> .gitignore
           git add .gitignore
-          git commit -m "Ignore workflows folder in backup branch"
+          git commit -m "Ignore .github/workflows folder in backup branch"
 
       - name: Remove Workflows Folder
         run: |
           if [ -d ".github/workflows" ]; then
             git rm -r --cached .github/workflows
-            git commit -m "Remove workflows folder from backup branch"
+            git commit -m "Remove .github/workflows folder from backup branch"
           fi
 
       - name: Push Backup Branch
